Feat: Nginx iniciando

--- a/ansible/files/docker-compose.yml
+++ b/ansible/files/docker-compose.yml
@@ -5,35 +5,23 @@ services:
     build: ./express-service-1
     environment:
       - SERVICE_NAME=Express Service 1
-    ports: # Expor portas para acesso direto para debug se necessário
-      - "3001:3000" # Exemplo: mapeia 3001 do host para 3000 do contêiner
+    # Não vamos expor a porta 3001 da VM para o host para simplificar,
+    # já que o Nginx vai encaminhar o tráfego internamente.
+    # ports:
+    #   - "3001:3000"
     deploy:
       replicas: 3 # Múltiplas instâncias para balanceamento de carga interno do Docker
       restart_policy:
-        condition: on_failure
-    networks:
-      - app_network
-
-  express_service_2:
-    build: ./express-service-2
-    environment:
-      - SERVICE_NAME=Express Service 2
-    ports:
-      - "3002:3000" # Exemplo: mapeia 3002 do host para 3000 do contêiner
-    deploy:
-      replicas: 2
-      restart_policy:
-        condition: on_failure
+        condition: on-failure
     networks:
       - app_network
 
   nginx_gateway:
     build: ./nginx
     ports:
-      - "80:80" # Mapeia a porta 80 da VM para a porta 80 do contêiner Nginx
-    depends_on: # Garante que os serviços Express subam antes do Nginx
-      - express_service_1
-      - express_service_2
+      - "80:80" # Mapeia a porta 80 da VM para a porta 80 do host (agora a única VM)
+    depends_on:
+      - express_service_1 # Agora depende apenas do Express Service 1
     networks:
       - app_network
 
