--- a/ansible/files/nginx/nginx.conf
+++ b/ansible/files/nginx/nginx.conf
@@ -7,30 +7,14 @@ http {
         server express_service_1:3000; # Nome do serviço Docker Compose
     }
 
-    upstream express_service_2 {
-        server express_service_2:3000; # Nome do serviço Docker Compose
-    }
-
     server {
         listen 80;
 
-        location /service1 {
+        location / { # Agora tudo vai para o Service 1
             proxy_pass http://express_service_1;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location /service2 {
-            proxy_pass http://express_service_2;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-        location / {
-            return 200 'Welcome to the Nginx Gateway! Try /service1 or /service2\n';
-            add_header Content-Type text/plain;
         }
     }
 }
